pygate/pyeth: make defaults

--- a/esp32/Makefile
+++ b/esp32/Makefile
@@ -26,6 +26,12 @@ BTYPE ?= release
 # make Non-Pybytes firmware default
 VARIANT ?=BASE
 
+# set to 1 to enable PyEthernet board (ksz8851 chip)
+PYETH_ENABLED ?= 0
+
+# set to 1 to enable LoRaWAN gateway (requires Pygate board)
+PYGATE_ENABLED ?= 0
+
 ifeq ($(VARIANT),BASE)
 	BUILD_DIR ?=build
 else
