--- a/esp32/Makefile
+++ b/esp32/Makefile
@@ -32,6 +32,12 @@ PYETH_ENABLED ?= 0
 # set to 1 to enable LoRaWAN gateway (requires Pygate board)
 PYGATE_ENABLED ?= 0
 
+# COAP is enabled by default
+MOD_COAP_ENABLED ?= 1
+
+# SIGFOX is enabled by default. It will only be built for supported boards.
+MOD_SIGFOX_ENABLED ?= 1
+
 ifeq ($(VARIANT),BASE)
 	BUILD_DIR ?=build
 else
@@ -104,15 +110,27 @@ LIBS = -L$(ESP_IDF_COMP_PATH)/esp32/lib -L$(ESP_IDF_COMP_PATH)/esp32/ld -L$(ESP_
        -L$(ESP_IDF_COMP_PATH)/esp32 -L$(ESP_IDF_COMP_PATH)/newlib/lib -Lbootloader \
        -Llib -lnvs_flash -ltcpip_adapter -L$(BUILD) -lhal -lcore -lwps -lcoexist -lstdc++ \
        -lnet80211 -lphy -lpp -lrtc -llog -lsmartconfig -lwpa -lwpa2 -lbtdm_app -lcxx -u __cxa_guard_dummy \
-       -lsigfox -lspi_flash -lnvs_flash -lgcc -lnghttp -ldriver -lesp32 -lexpat -lpthread -lesp_adc_cal \
+       -lspi_flash -lnvs_flash -lgcc -lnghttp -ldriver -lesp32 -lexpat -lpthread -lesp_adc_cal \
        $(ESP_IDF_COMP_PATH)/newlib/lib/libm-psram-workaround.a \
        $(ESP_IDF_COMP_PATH)/newlib/lib/libc-psram-workaround.a \
        -lfreertos -ljson -ljsmn -llwip -lnewlib -lvfs -lopenssl -lmbedtls -lwpa_supplicant \
        -lxtensa-debug-module -lbt -lsdmmc -lsoc -lheap -lbootloader_support -lmicro-ecc \
-       -u ld_include_panic_highint_hdl -lsmartconfig_ack -lmesh -lesp_ringbuf -lcoap -lmdns -lefuse -lespcoredump -lapp_update
-ifeq ($(BOARD), $(filter $(BOARD), SIPY LOPY4 FIPY))
-    LIBS += sigfox/modsigfox_$(BOARD).a
-$(BUILD)/application.elf: sigfox/modsigfox_$(BOARD).a
+       -u ld_include_panic_highint_hdl -lsmartconfig_ack -lmesh -lesp_ringbuf -lmdns -lefuse -lespcoredump -lapp_update
+
+ifeq ($(MOD_COAP_ENABLED), 1)
+    $(info COAP Module Enabled)
+    LIBS += -lcoap
+    CFLAGS += -DMOD_COAP_ENABLED
+endif
+
+ifeq ($(MOD_SIGFOX_ENABLED), 1)
+    $(info SIGFOX Module Enabled)
+
+    ifeq ($(BOARD), $(filter $(BOARD), SIPY LOPY4 FIPY))
+        CFLAGS += -DMOD_SIGFOX_ENABLED
+        LIBS += sigfox/modsigfox_$(BOARD).a -lsigfox
+        $(BUILD)/application.elf: sigfox/modsigfox_$(BOARD).a
+    endif
 endif
 
 ifeq ($(OPENTHREAD), on)
