--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 # Build directories
 ######################
+esp32/build/
 esp32/build-*/
 mpy-cross/build/*
 # This map file is generated here instead of the build folder...
