PYCOM : improved option MICROPY_FLOAT_IMPL

--- a/esp32/Makefile
+++ b/esp32/Makefile
@@ -130,7 +130,9 @@ else
 ifeq ($(MICROPY_FLOAT_IMPL),none)
 CFLAGS += -DMICROPY_FLOAT_IMPL=MICROPY_FLOAT_IMPL_NONE
 else
+ifeq ($(MICROPY_FLOAT_IMPL),single)
 CFLAGS += -DMICROPY_FLOAT_IMPL=MICROPY_FLOAT_IMPL_FLOAT
+endif
 endif
 endif
 
