Update to support esp-idf v4.1

--- a/esp32/Makefile
+++ b/esp32/Makefile
@@ -14,7 +14,7 @@ ifeq ($(wildcard boards/$(BOARD)/.),)
     $(error Invalid BOARD specified)
 endif
 
-IDF_HASH=05cbe2b
+IDF_HASH=8d4ec0a
 XTENSA_VERSION = "2020r2"
 
 TARGET ?= boot_app
@@ -119,7 +119,8 @@ LIBS = -L$(ESP_IDF_COMP_PATH)/esp32/lib \
        -lfreertos -llwip -lnewlib -lvfs -lopenssl -lmbedtls -lwpa_supplicant \
        -lbt -lsdmmc -lsoc -lheap -lbootloader_support \
        -lesp_ringbuf -lcoap -lmdns -lefuse -lespcoredump -lapp_update \
-       -lesp_common -lesp_event -lesp_wifi -lphy -lbtdm_app -lrtc -lnet80211 -lxtensa -lpp -lcore -lmesh -lhal -lcoexist -lesp_eth -lsmartconfig
+       -lesp_common -lesp_event -lesp_wifi -lphy -lbtdm_app -lrtc -lnet80211 -lxtensa -lpp -lcore -lmesh -lhal -lcoexist -lesp_eth -lsmartconfig \
+       -lesp_netif
 
 # These libraries cannot be used otherwise application.elf does not link, error: "undefined references to `__locale_ctype_ptr'"
 # Using the libc and libm from the Toolchain solves this issue.
