--- a/esp32/Makefile
+++ b/esp32/Makefile
@@ -39,6 +39,9 @@ MOD_COAP_ENABLED ?= 1
 # SIGFOX is enabled by default. It will only be built for supported boards.
 MOD_SIGFOX_ENABLED ?= 1
 
+# ESP-NOW is enabled by default
+MOD_ESPNOW_ENABLED ?= 1
+
 # Pybytes disabled by default
 PYBYTES_ENABLED ?= 0
 
@@ -164,8 +167,7 @@ LIBS = -L$(ESP_IDF_COMP_PATH)/esp32/lib \
        -lbt -lsdmmc -lsoc -lheap -lbootloader_support \
        -lesp_ringbuf -lefuse -lespcoredump -lapp_update \
        -lesp_common -lesp_event -lesp_wifi -lphy -lbtdm_app -lrtc -lnet80211 \
-       -lxtensa -lpp -lcore -lmesh -lhal -lcoexist -lesp_eth -lsmartconfig -ljson -ltfmicro \
-       -lespnow
+       -lxtensa -lpp -lcore -lmesh -lhal -lcoexist -lesp_eth -lsmartconfig -ljson -ltfmicro
 
 ifeq ($(MOD_COAP_ENABLED), 1)
     $(info COAP Module Enabled)
@@ -197,6 +199,12 @@ ifeq ($(OPENTHREAD), on)
     $(info OPENTHREAD enabled)
     LIBS += -lopenthread
     CFLAGS += -DLORA_OPENTHREAD_ENABLED
+endif
+
+ifeq ($(MOD_ESPNOW_ENABLED), 1)
+    $(info ESP-NOW Module Enabled)
+    LIBS += -lespnow
+    CFLAGS += -DMOD_ESPNOW_ENABLED
 endif
 
 # Enable or Disable LTE_LOG_BUFF
